# cuda-wrapper

./: .gitignore  AfterBoot.sh  CMakeLists.txt  Makefile  README.md  libcudart_wrapper.c  make_stubs.py  requirements.txt  tegrastats  wrap_generate.py
GM/CUDA-Samples/stereoDisparity/indep_memory/default/process/: stereoDisparity  stereoDisparity.cu
GM/CUDA-Samples/stereoDisparity/indep_memory/default/process/Kernel-Sync/: run_4_SO.sh
GM/CUDA-Samples/stereoDisparity/indep_memory/default/process/NoLocks-Sync/: README
GM/CUDA-Samples/stereoDisparity/indep_memory/default/process/POSIX-Sync/: run_4_SO.sh
GM/CUDA-Samples/stereoDisparity/indep_memory/default/thread/: stereoDisparity  stereoDisparity.cu
GM/CUDA-Samples/stereoDisparity/indep_memory/streams/process/: Makefile  stereoDisparity  stereoDisparity.cu
GM/CUDA-Samples/stereoDisparity/indep_memory/streams/thread/: Makefile  stereoDisparity  stereoDisparity.cu
GM/CUDA-Samples/vectorAdd/indep_memory/default_pinned/process/: vectorAdd.cu
GM/CUDA-Samples/vectorAdd/indep_memory/default_pinned/thread/: vectorAdd  vectorAdd.cu
GM/CUDA-Samples/vectorAdd/indep_memory/streams_pinned/process/: vectorAdd
GM/CUDA-Samples/vectorAdd/indep_memory/streams_pinned/thread/: vectorAdd
GM/Experiments/launcher/: log  run_i.sh  tester.sh
GM/Experiments/stereoDisparity/indep_memory/default/process/: stereoDisparity  stereoDisparity.cu
GM/Experiments/stereoDisparity/indep_memory/default/thread/: stereoDisparity
GM/Experiments/stereoDisparity/indep_memory/streams/process/: Makefile  stereoDisparity  stereoDisparity.cu
GM/Experiments/stereoDisparity/indep_memory/streams/thread/: stereoDisparity
GM/Experiments/vectorAdd/indep_memory/default_pinned/thread/: Makefile  vectorAdd  vectorAdd.cu
GM/Experiments/vectorAdd/indep_memory/streams_pinned/process/: AfterBoot.sh  vectorAdd.cu
GM/Experiments/vectorAdd/indep_memory/streams_pinned/thread/: vectorAdd  vectorAdd.cu
GM/Locks/Kernel_Locks/: GPU_Locklib.c  GPU_Locks_kernel.h  Makefile
GM/Locks/Kernel_Locks/rt_module/: GPU_Locks.c  GPU_Locks.ko  modules.order
GM/Locks/POSIX_Locks/: GPU_Locklib.c  Makefile
GM/Locks/POSIX_Locks/shared/: GPU_Locks  GPU_Locks.c  Makefile  README
GM/Wrapper/: make_stubs_log.py  wrap_generate.py
GPUSync/CUDA-Samples/SobelFilter/: Makefile  SobelFilter.cu
GPUSync/CUDA-Samples/stereoDisparity/indep_memory/default/process/: Makefile
GPUSync/CUDA-Samples/stereoDisparity/indep_memory/default/thread/: Makefile
GPUSync/CUDA-Samples/stereoDisparity/indep_memory/streams/process/: Makefile  stereoDisparity
GPUSync/CUDA-Samples/stereoDisparity/thread_function/: stereoDisparity.cu
GPUSync/CUDA-Samples/vectorAdd/indep_memory/streams_pinned/process/: Makefile  vectorAdd.cu
GPUSync/CUDA-Samples/vectorAdd/indep_memory/streams_pinned/thread/: Makefile  vectorAdd.cu
GPUSync/Experiments/Launcher/: concurrent_processes.sh  kern_log_i.sh  log  run_i.sh  time_locks.sh
GPUSync/Locks/Kernel_Locks/: GPU_Locklib.c
GPUSync/Locks/Kernel_Locks/rt_module/: GPU_Locks.c  Makefile  modules.order
GPUSync/Locks/POSIX_Locks/: GPU_Locklib.c
GPUSync/Locks/POSIX_Locks/shared/: Makefile
GPUSync/Wrapper/: GPU_Locks.h
(+88 files in other folders)
